MVP2-115: Fix carousel tags ui on mobile

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -98,6 +98,9 @@
     }
 
     .tagList {
+        display: flex;
+        flex-flow: wrap;
+        
         .tag {
             color: #b0b0b0;
             margin-right: 6px;
